tests/lex-fail/bad_exp_float2.fl.0.exp
Error: bad_exp_float2.fl(1,1): Missing exponent part of floating point literal
10.0ea
^      
